@@ -3,6 +3,7 @@ package uk.gov.di.authentication.external.validators;
 import com.nimbusds.jose.JOSEException;
 import com.nimbusds.jose.JWSAlgorithm;
 import com.nimbusds.jose.JWSSigner;
+import com.nimbusds.jose.KeySourceException;
 import com.nimbusds.jose.crypto.RSASSASigner;
 import com.nimbusds.jose.jwk.Curve;
 import com.nimbusds.jose.jwk.ECKey;
@@ -11,6 +12,7 @@ import com.nimbusds.jose.jwk.gen.ECKeyGenerator;
 import com.nimbusds.jose.jwk.gen.RSAKeyGenerator;
 import com.nimbusds.oauth2.sdk.ErrorObject;
 import com.nimbusds.oauth2.sdk.OAuth2Error;
+import com.nimbusds.oauth2.sdk.auth.PrivateKeyJWT;
 import com.nimbusds.oauth2.sdk.id.Audience;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Nested;
@@ -19,6 +21,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import uk.gov.di.authentication.shared.exceptions.TokenAuthInvalidException;
+import uk.gov.di.authentication.shared.services.RemoteJwksService;
 import uk.gov.di.authentication.sharedtest.helper.JwtHelper;
 
 import java.security.spec.X509EncodedKeySpec;
@@ -35,10 +38,15 @@ import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class TokenRequestValidatorTest {
     private static final String VALID_REDIRECT_URI = "https://redirect-uri.co.uk";
     private static final String VALID_CLIENT_ID = "client-id";
+    private static final RemoteJwksService authJwksService = mock(RemoteJwksService.class);
     private final TokenRequestValidator validator =
             new TokenRequestValidator(VALID_REDIRECT_URI, VALID_CLIENT_ID);
 
@@ -177,7 +185,9 @@ class TokenRequestValidatorTest {
         private static String validRequestBodyValidSignature;
         private static String validRequestBodyInvalidSignature;
         private static String validRequestBodyRsaSignature;
-        private static String incompleteRequestBodyValidSignature;
+        private static final String EC_KEY_ID = "ec-key";
+        private static final String ALTERNATIVE_EC_KEY_ID = "alternative-ec-key";
+        private static final String RSA_KEY_ID = "rsa-key";
 
         @BeforeAll
         static void init() throws JOSEException, ParseException {
@@ -190,7 +200,7 @@ class TokenRequestValidatorTest {
                             "jti",
                             0L);
 
-            ECKey validKeyPair = new ECKeyGenerator(Curve.P_256).generate();
+            ECKey validKeyPair = new ECKeyGenerator(Curve.P_256).keyID(EC_KEY_ID).generate();
             X509EncodedKeySpec x509EncodedKeySpec =
                     new X509EncodedKeySpec(validKeyPair.toPublicKey().getEncoded());
             byte[] x509EncodedPublicKey = x509EncodedKeySpec.getEncoded();
@@ -199,14 +209,9 @@ class TokenRequestValidatorTest {
                     JwtHelper.jsonToSignedJwt(validClientAssertionPayload, validKeyPair);
             validRequestBodyValidSignature =
                     getValidRequestBodyWithClientAssertion(clientAssertionValidKeySignature);
-            incompleteRequestBodyValidSignature =
-                    "code=vC-WxcXDLoOHaJN0YvPB0IwG2LiT1ekSVRSccwubwlI"
-                            + "&grant_type=authorization_code"
-                            + "&redirect_uri=https://redirect.uri.com/redirect"
-                            + "&client_assertion="
-                            + clientAssertionValidKeySignature;
 
-            ECKey alternateEcKeyPair = new ECKeyGenerator(Curve.P_256).generate();
+            ECKey alternateEcKeyPair =
+                    new ECKeyGenerator(Curve.P_256).keyID(ALTERNATIVE_EC_KEY_ID).generate();
             String clientAssertionInvalidEcKeySignature =
                     JwtHelper.jsonToSignedJwt(validClientAssertionPayload, alternateEcKeyPair);
             X509EncodedKeySpec alternatex509EncodedKeySpec =
@@ -218,7 +223,7 @@ class TokenRequestValidatorTest {
             validRequestBodyInvalidSignature =
                     getValidRequestBodyWithClientAssertion(clientAssertionInvalidEcKeySignature);
 
-            RSAKey rsaKeyPair = new RSAKeyGenerator(2048).generate();
+            RSAKey rsaKeyPair = new RSAKeyGenerator(2048).keyID(RSA_KEY_ID).generate();
             X509EncodedKeySpec x509EncodedKeySpecRsa =
                     new X509EncodedKeySpec(rsaKeyPair.toPublicKey().getEncoded());
             byte[] x509EncodedPublicKeyRsa = x509EncodedKeySpecRsa.getEncoded();
@@ -226,23 +231,22 @@ class TokenRequestValidatorTest {
             JWSSigner rsaSigner = new RSASSASigner(rsaKeyPair.toRSAPrivateKey());
             String clientAssertionRsaKeySignature =
                     JwtHelper.jsonToSignedJwt(
-                            validClientAssertionPayload, rsaSigner, JWSAlgorithm.PS256);
+                            validClientAssertionPayload,
+                            rsaSigner,
+                            JWSAlgorithm.PS256,
+                            rsaKeyPair.getKeyID());
             validRequestBodyRsaSignature =
                     getValidRequestBodyWithClientAssertion(clientAssertionRsaKeySignature);
+            when(authJwksService.retrieveJwkFromURLWithKeyId(EC_KEY_ID))
+                    .thenReturn(validKeyPair.toPublicJWK());
+            when(authJwksService.retrieveJwkFromURLWithKeyId(ALTERNATIVE_EC_KEY_ID))
+                    .thenReturn(alternateEcKeyPair.toPublicJWK());
+            when(authJwksService.retrieveJwkFromURLWithKeyId(RSA_KEY_ID))
+                    .thenReturn(rsaKeyPair.toPublicJWK());
         }
 
         static Stream<Arguments> validationTestData() {
             return Stream.of(
-                    arguments(
-                            "string-not-jwt",
-                            OAuth2Error.INVALID_REQUEST_CODE,
-                            "Invalid private_key_jwt",
-                            validPublicKeyAsX509String),
-                    arguments(
-                            incompleteRequestBodyValidSignature,
-                            OAuth2Error.INVALID_REQUEST_CODE,
-                            "Invalid private_key_jwt",
-                            validPublicKeyAsX509String),
                     arguments(
                             validRequestBodyRsaSignature,
                             OAuth2Error.INVALID_CLIENT_CODE,
@@ -261,18 +265,32 @@ class TokenRequestValidatorTest {
                 String requestBody,
                 String expectedErrorCode,
                 String expectedErrorDescription,
-                String clientRegistryPublicKey) {
+                String orchStubPublicKey) {
             TokenAuthInvalidException exception =
                     assertThrows(
                             TokenAuthInvalidException.class,
                             () ->
                                     validator.validatePrivateKeyJwtClientAuth(
-                                            requestBody,
+                                            PrivateKeyJWT.parse(requestBody),
                                             EXPECTED_AUDIENCE,
-                                            Collections.singletonList(clientRegistryPublicKey)));
+                                            List.of(orchStubPublicKey)));
 
             assertEquals(expectedErrorCode, exception.getErrorObject().getCode());
             assertEquals(expectedErrorDescription, exception.getErrorObject().getDescription());
+        }
+
+        @Test
+        void shouldThrowExceptionIfNoKeysAvailableToVerifySignature() throws Exception {
+            doThrow(new KeySourceException("No key found"))
+                    .when(authJwksService)
+                    .retrieveJwkFromURLWithKeyId(anyString());
+            assertThrows(
+                    TokenAuthInvalidException.class,
+                    () ->
+                            validator.validatePrivateKeyJwtClientAuth(
+                                    PrivateKeyJWT.parse(validRequestBodyValidSignature),
+                                    EXPECTED_AUDIENCE,
+                                    List.of()));
         }
 
         @Test
@@ -281,7 +299,7 @@ class TokenRequestValidatorTest {
             assertDoesNotThrow(
                     () ->
                             validator.validatePrivateKeyJwtClientAuth(
-                                    validRequestBodyValidSignature,
+                                    PrivateKeyJWT.parse(validRequestBodyValidSignature),
                                     EXPECTED_AUDIENCE,
                                     Collections.singletonList(validPublicKeyAsX509String)));
         }
@@ -292,11 +310,37 @@ class TokenRequestValidatorTest {
             assertDoesNotThrow(
                     () ->
                             validator.validatePrivateKeyJwtClientAuth(
-                                    validRequestBodyValidSignature,
+                                    PrivateKeyJWT.parse(validRequestBodyValidSignature),
                                     EXPECTED_AUDIENCE,
                                     List.of(
                                             validPublicKeyAsX509String,
                                             alternateEcKeyAsX509String)));
+        }
+
+        @Test
+        void
+                shouldNotThrowAnyExceptionsIfValidPublicKeyIsUsedToSignValidClientAssertionAsPartOfValidRequestBodyWhenUsingJwks() {
+            assertDoesNotThrow(
+                    () ->
+                            validator.validatePrivateKeyJwtClientAuth(
+                                    PrivateKeyJWT.parse(validRequestBodyValidSignature),
+                                    EXPECTED_AUDIENCE,
+                                    List.of(alternateEcKeyAsX509String)));
+        }
+
+        @Test
+        void
+                shouldNotThrowAnyExceptionsIfValidSignatureUsedWhenNoKeyFoundOnJwksEndpointButStubKeyPresent()
+                        throws Exception {
+            doThrow(new KeySourceException("No key found"))
+                    .when(authJwksService)
+                    .retrieveJwkFromURLWithKeyId(anyString());
+            assertDoesNotThrow(
+                    () ->
+                            validator.validatePrivateKeyJwtClientAuth(
+                                    PrivateKeyJWT.parse(validRequestBodyValidSignature),
+                                    EXPECTED_AUDIENCE,
+                                    List.of(alternateEcKeyAsX509String)));
         }
     }
 
